fixing alignment

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -318,6 +318,7 @@ fieldset * {
   font-weight: 700;
   letter-spacing: 0.37px;
   line-height: 52px;
+  width: 100%;
 }
 
 .paragraph {
